# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  14 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/spawn.py, targets/system/system-controller.sh:
  Add clean no-op for system target

  14 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/alpha.py, modules/catalyst/arch/amd64.py,
  modules/catalyst/arch/arm.py, modules/catalyst/arch/hppa.py,
  modules/catalyst/arch/ia64.py, modules/catalyst/arch/mips.py,
  modules/catalyst/arch/powerpc.py, modules/catalyst/arch/s390.py,
  modules/catalyst/arch/sh.py, modules/catalyst/arch/sparc.py,
  modules/catalyst/arch/x86.py, modules/catalyst/lock.py,
  modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py:
  Fix up a few runtime errors

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  +modules/catalyst/target/system.py, +targets/system/system-chroot.sh,
  +targets/system/system-controller.sh,
  +targets/system/system-preclean-chroot.sh:
  Initial commit of new system target

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add procedure for 'system' target

  13 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> M:
  TODO updates: add information about verification of
  seeds/caches/configs/specs, update automated actions section in targets, add
  all-stages and all-images target information, clean up system and world
  target information, add information on improving caching/resuming, move
  mixed host/target information into targets section, add information on
  replacing livecd-tools (hwdata/libkudzu/hwsetup) with internal code, and
  fixing the spacing.

  13 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> M:
  TODO updates: added section on statistics gathering/reporting, added section
  on (potential) new targets, and update boot loader section.

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>